- text.c:
  do_enter()
	- Don't update the edit window until we set placewewant. (DLR)
  break_line()
	- Fix a problem where a line could be broken in the middle of a
	  multibyte character. (DLR)
  do_word_count()
	- Rename to do_wordlinechar_count(), and expand to also count
	  the number of lines and characters in the file or selection,
	  as wc does. (DLR)
- winio.c:
  get_escape_seq_kbinput()
	- Fix typo preventing the VT100/VT220/VT320/xterm/rxvt escape
	  sequence for ',' on the numeric keypad with NumLock off from
	  being interpreted properly. (DLR)
  get_word_kbinput()
	- Multiply the entered digits by hexadecimal numbers instead of
	  decimal numbers for clarity, rename to get_unicode_kbinput(),
	  and rename variables word and word_digits to uni and
	  uni_digits. (DLR)
  parse_verbatim_kbinput()
	- Rename variables word_mb and word_mb_len to uni_mb and
	  uni_mb_len. (DLR)
  display_string()
	- Instead of using parse_mbchar()'s bad_chr parameter, use
	  mbrep() to get the representation of a bad character. (DLR)
	- If column is less than start_col and the character's a tab,
	  which can be possible if there are enough tabs and the
	  terminal size is sufficiently large, don't try to display it
	  using control_mbrep(). (DLR, found by Duncan Geoffry Doyle)
	- Really avoid a memory corruption problem by allocating enough
	  space for COLS characters. (DLR)
  edit_redraw(), edit_refresh()
	- Clean up and simplify. (DLR)
  edit_update()
	- Since we no longer use TOP, remove references to it.  Also,
	  don't call edit_refresh() anymore; it will call us. (DLR)
  do_statusbar_next_word()
	- Rework to be more like do_statusbar_prev_word(), to avoid a
	  potential problem if we start at the end of a line. (DLR)
  do_statusbar_input()
	- Call do_statusbar_mouse() instead of do_mouse(). (DLR)
  do_statusbar_output()
	- When adding a character, just add its length in bytes to
	  statusbar_x instead of calling do_statusbar_right(). (DLR)
  titlebar()