@@ -325,6 +325,13 @@ CVS code -
 	  the number of lines and characters in the file or selection,
 	  as wc does. (DLR)
 - winio.c:
+  get_key_buffer()
+	- Only save all open buffers and hang up when a blocking
+	  wgetch() returns ERR and errno is set to EIO (input/output
+	  error).  If errno is set to something else, recover properly.
+	  This fixes problems with nano's erroneously hanging up while
+	  e.g. resizing or unsuspending in a chroot. (DLR, found by Mike
+	  Frysinger)
   get_escape_seq_kbinput()
 	- Fix typo preventing the VT100/VT220/VT320/xterm/rxvt escape
 	  sequence for ',' on the numeric keypad with NumLock off from
